Fix sample `Joined.html`, use valid path

--- a/sample/Joined.html
+++ b/sample/Joined.html
@@ -7,7 +7,7 @@
   </title>
 
   <script src="../out/debug/Main.s"></script>
-  <script src="./Joined.s"></script>
+  <script src="./Joined.js"></script>
 
  </head>
  <body>
