Build compiled files with regular and with external dependencies

--- a/sample/Joined.html
+++ b/sample/Joined.html
@@ -6,7 +6,7 @@
    wProto unit test.
   </title>
 
-  <script src="../out/debug/Main.s"></script>
+  <script src="../out/stxt.browser.debug/Main.js"></script>
   <script src="./Joined.js"></script>
 
  </head>
